lib/plugin/ffi_plugin/automata_lib_cpp_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// FFI bindings for automata C++ library.
class AutomataLibCpp {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AutomataLibCpp(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AutomataLibCpp.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// ParseTree class Definition
  ffi.Pointer<ParseTree> ParseTree_create_instance(
    ffi.Pointer<ffi.Char> reg,
  ) {
    return _ParseTree_create_instance(
      reg,
    );
  }

  late final _ParseTree_create_instancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ParseTree> Function(
              ffi.Pointer<ffi.Char>)>>('ParseTree_create_instance');
  late final _ParseTree_create_instance = _ParseTree_create_instancePtr
      .asFunction<ffi.Pointer<ParseTree> Function(ffi.Pointer<ffi.Char>)>();

  void ParseTree_destroy_instance(
    ffi.Pointer<ParseTree> instance,
  ) {
    return _ParseTree_destroy_instance(
      instance,
    );
  }

  late final _ParseTree_destroy_instancePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ParseTree>)>>(
          'ParseTree_destroy_instance');
  late final _ParseTree_destroy_instance = _ParseTree_destroy_instancePtr
      .asFunction<void Function(ffi.Pointer<ParseTree>)>();

  ffi.Pointer<ffi.Char> ParseTree_generateDotText(
    ffi.Pointer<ParseTree> instance,
  ) {
    return _ParseTree_generateDotText(
      instance,
    );
  }

  late final _ParseTree_generateDotTextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ParseTree>)>>('ParseTree_generateDotText');
  late final _ParseTree_generateDotText = _ParseTree_generateDotTextPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ParseTree>)>();

  /// NFA class Definition
  ffi.Pointer<NFA> NFA_create_instance(
    ffi.Pointer<ffi.Char> reg,
  ) {
    return _NFA_create_instance(
      reg,
    );
  }

  late final _NFA_create_instancePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<NFA> Function(ffi.Pointer<ffi.Char>)>>(
      'NFA_create_instance');
  late final _NFA_create_instance = _NFA_create_instancePtr.asFunction<
      ffi.Pointer<NFA> Function(ffi.Pointer<ffi.Char>)>();

  void NFA_destroy_instance(
    ffi.Pointer<NFA> instance,
  ) {
    return _NFA_destroy_instance(
      instance,
    );
  }

  late final _NFA_destroy_instancePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NFA>)>>(
          'NFA_destroy_instance');
  late final _NFA_destroy_instance =
      _NFA_destroy_instancePtr.asFunction<void Function(ffi.Pointer<NFA>)>();

  ffi.Pointer<ffi.Char> NFA_generateDotText(
    ffi.Pointer<NFA> instance,
  ) {
    return _NFA_generateDotText(
      instance,
    );
  }

  late final _NFA_generateDotTextPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<NFA>)>>(
      'NFA_generateDotText');
  late final _NFA_generateDotText = _NFA_generateDotTextPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<NFA>)>();

  /// DFA class Definition
  ffi.Pointer<DFA> DFA_create_instance(
    ffi.Pointer<ffi.Char> reg,
  ) {
    return _DFA_create_instance(
      reg,
    );
  }

  late final _DFA_create_instancePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<DFA> Function(ffi.Pointer<ffi.Char>)>>(
      'DFA_create_instance');
  late final _DFA_create_instance = _DFA_create_instancePtr.asFunction<
      ffi.Pointer<DFA> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<DFA> DFA_create_instance_from_data(
    ffi.Pointer<ffi.Char> symbols,
    int symbols_size,
    ffi.Pointer<ffi.Int> table,
    int table_size,
    ffi.Pointer<ffi.Int> final_states,
    int final_states_size,
  ) {
    return _DFA_create_instance_from_data(
      symbols,
      symbols_size,
      table,
      table_size,
      final_states,
      final_states_size,
    );
  }

  late final _DFA_create_instance_from_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<DFA> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Int>,
              ffi.Int,
              ffi.Pointer<ffi.Int>,
              ffi.Int)>>('DFA_create_instance_from_data');
  late final _DFA_create_instance_from_data =
      _DFA_create_instance_from_dataPtr.asFunction<
          ffi.Pointer<DFA> Function(ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Int>, int, ffi.Pointer<ffi.Int>, int)>();

  void DFA_destroy_instance(
    ffi.Pointer<DFA> instance,
  ) {
    return _DFA_destroy_instance(
      instance,
    );
  }

  late final _DFA_destroy_instancePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DFA>)>>(
          'DFA_destroy_instance');
  late final _DFA_destroy_instance =
      _DFA_destroy_instancePtr.asFunction<void Function(ffi.Pointer<DFA>)>();

  ffi.Pointer<ffi.Char> DFA_generateDotText(
    ffi.Pointer<DFA> instance,
  ) {
    return _DFA_generateDotText(
      instance,
    );
  }

  late final _DFA_generateDotTextPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<DFA>)>>(
      'DFA_generateDotText');
  late final _DFA_generateDotText = _DFA_generateDotTextPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<DFA>)>();

  int DFA_test(
    ffi.Pointer<DFA> instance,
    ffi.Pointer<ffi.Char> str,
  ) {
    return _DFA_test(
      instance,
      str,
    );
  }

  late final _DFA_testPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<DFA>, ffi.Pointer<ffi.Char>)>>('DFA_test');
  late final _DFA_test = _DFA_testPtr.asFunction<
      int Function(ffi.Pointer<DFA>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<DFA> DFA_minimalDFA(
    ffi.Pointer<DFA> instance,
  ) {
    return _DFA_minimalDFA(
      instance,
    );
  }

  late final _DFA_minimalDFAPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<DFA> Function(ffi.Pointer<DFA>)>>(
          'DFA_minimalDFA');
  late final _DFA_minimalDFA = _DFA_minimalDFAPtr.asFunction<
      ffi.Pointer<DFA> Function(ffi.Pointer<DFA>)>();

  int DFA_isMinimal(
    ffi.Pointer<DFA> instance,
  ) {
    return _DFA_isMinimal(
      instance,
    );
  }

  late final _DFA_isMinimalPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<DFA>)>>(
          'DFA_isMinimal');
  late final _DFA_isMinimal =
      _DFA_isMinimalPtr.asFunction<int Function(ffi.Pointer<DFA>)>();

  int DFA_equalsDFA(
    ffi.Pointer<DFA> instance,
    ffi.Pointer<DFA> other,
  ) {
    return _DFA_equalsDFA(
      instance,
      other,
    );
  }

  late final _DFA_equalsDFAPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<DFA>, ffi.Pointer<DFA>)>>('DFA_equalsDFA');
  late final _DFA_equalsDFA = _DFA_equalsDFAPtr.asFunction<
      int Function(ffi.Pointer<DFA>, ffi.Pointer<DFA>)>();

  ffi.Pointer<ffi.Char> DFA_getDiffString(
    ffi.Pointer<DFA> instance,
    ffi.Pointer<DFA> other,
    int max_depth,
  ) {
    return _DFA_getDiffString(
      instance,
      other,
      max_depth,
    );
  }

  late final _DFA_getDiffStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<DFA>, ffi.Pointer<DFA>,
              ffi.Int)>>('DFA_getDiffString');
  late final _DFA_getDiffString = _DFA_getDiffStringPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<DFA>, ffi.Pointer<DFA>, int)>();

  ffi.Pointer<ffi.Char> DFA_getDFAText(
    ffi.Pointer<DFA> instance,
  ) {
    return _DFA_getDFAText(
      instance,
    );
  }

  late final _DFA_getDFATextPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<DFA>)>>(
      'DFA_getDFAText');
  late final _DFA_getDFAText = _DFA_getDFATextPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<DFA>)>();
}

final class ParseTree extends ffi.Opaque {}

final class NFA extends ffi.Opaque {}

final class DFA extends ffi.Opaque {}
